--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             referrerpolicy="no-referrer"
         />
         <script src="./script.js" defer></script>
-        <title>Document</title>
+        <title>FAQ</title>
     </head>
     <body>
         <div class="container">
